--- a/Answer/06/weather-app/package.json
+++ b/Answer/06/weather-app/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "postman-request": "^2.88.1-postman.30"
+    "request": "^2.88.0"
   }
 }
